--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -81,17 +81,14 @@ body {
             position: absolute;
             top: 0;
             background: $g-01;
-            z-index: 1;
+            z-index: 4;
             animation: curtain 0.6s 0.3s cubic-bezier(0.48, 0.14, 0.26, 1.01) both;
             backdrop-filter: blur(10px);
         }
 
         &:after {
-            z-index: 2;
             bottom: 0;
             top: initial;
-
-
         }
 
         @keyframes curtain {
@@ -101,7 +98,6 @@ body {
                 height: 0;
             }
         }
-
     }
 
     .swiper-pagination {
@@ -117,8 +113,6 @@ body {
         margin: 16px 0 !important;
         box-shadow: inset 0px 0px 2px white;
         background-color: rgba(white, 0.2);
-
-
     }
 
     .swiper-pagination-bullet-active {
@@ -156,7 +150,6 @@ body {
             @keyframes sliderHeading {
                 0% {
                     height: 0;
-
                 }
             }
 
@@ -690,12 +683,14 @@ body {
     }
 
     &__image {
-        @include transition;
+
         @include overlay;
         width: 100%;
         height: 100%;
         top: 0;
         position: absolute;
+        transition: all 1s ease;
+
 
         &:before,
         &:after {
@@ -719,6 +714,7 @@ body {
 
     &__productTitle {
         @include font-s;
+        font-weight: 600;
     }
 
     &__productSubtitle {
@@ -730,6 +726,7 @@ body {
         opacity: 0;
         position: absolute;
         bottom: 24px;
+        color: $m-02;
 
         transform: translateY(20px);
 
@@ -746,6 +743,7 @@ body {
         justify-content: flex-end;
         flex-direction: column;
         position: relative;
+
 
         &:before {
             @include transition2;
@@ -781,7 +779,11 @@ body {
 
                 &__image {
                     @include overlay;
-                    transform: scale(1.1);
+                    transform: scale(1.2);
+
+                    &:after {
+                        opacity: 0.7;
+                    }
 
                     @include sm {
                         transform: none;
@@ -1447,6 +1449,4 @@ body {
         grid-gap: 32px;
         grid-row-gap: 40px;
     }
-
-
 }
