--- a/sass/foundations/_colours.scss
+++ b/sass/foundations/_colours.scss
@@ -13,6 +13,7 @@ $neu-06: #B4B4BA;
 $neu-07: #7F8088;
 $neu-08: #5C5C66;
 $neu-09: #363842;
+$neu-10: #222328;
 
 $g-01: linear-gradient(148deg, $m-01, $m-02);
 
