--- a/css/main.css
+++ b/css/main.css
@@ -651,7 +651,7 @@ header .anime:nth-child(100) {
           transition-delay: 20.4s;
 }
 
-header .animeImg {
+header .animeBg {
   -webkit-transition: opacity 1s ease-in, -webkit-transform 2s ease;
   transition: opacity 1s ease-in, -webkit-transform 2s ease;
   transition: transform 2s ease, opacity 1s ease-in;
@@ -1284,8 +1284,8 @@ footer .anime:nth-child(100) {
           transition-delay: 20.4s;
 }
 
-section .animeImg,
-footer .animeImg {
+section .animeBg,
+footer .animeBg {
   -webkit-transition: opacity 1s ease-in, -webkit-transform 2s ease;
   transition: opacity 1s ease-in, -webkit-transform 2s ease;
   transition: transform 2s ease, opacity 1s ease-in;
@@ -1295,6 +1295,37 @@ footer .animeImg {
   opacity: 0;
 }
 
+section .animeImg,
+footer .animeImg {
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+  overflow: hidden;
+  -webkit-transform: translateY(100px) scaleY(1.2);
+          transform: translateY(100px) scaleY(1.2);
+  position: relative;
+}
+
+section .animeImg:before,
+footer .animeImg:before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: linear-gradient(148deg, #e6764d, #FFA825);
+  top: 0;
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+  z-index: 1;
+}
+
+section .animeImg img,
+footer .animeImg img {
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+  -webkit-transform: scale(1.6);
+          transform: scale(1.6);
+}
+
 .animeModules {
   opacity: 1;
   -webkit-transform: translateY(0);
@@ -1302,8 +1333,18 @@ footer .animeImg {
 }
 
 .animeModules .anime,
+.animeModules .animeBg,
 .animeModules .animeImg {
   opacity: 1;
+  -webkit-transform: none;
+          transform: none;
+}
+
+.animeModules .animeImg:before {
+  height: 0%;
+}
+
+.animeModules .animeImg img {
   -webkit-transform: none;
           transform: none;
 }
@@ -1635,6 +1676,8 @@ figure img {
   height: 56px;
   margin-right: 0px;
   margin-bottom: 24px;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
 }
 
 .infoIcon.vertical .infoIcon__title {
@@ -1643,6 +1686,7 @@ figure img {
   font-size: 22px;
   font-weight: 400;
   line-height: 32px;
+  color: #e6764d;
 }
 
 @media screen and (max-width: 799px) {
@@ -1668,6 +1712,7 @@ figure img {
   font-size: 16px;
   font-weight: 400;
   line-height: 28px;
+  color: #7F8088;
 }
 
 @media screen and (max-width: 799px) {
@@ -1678,6 +1723,11 @@ figure img {
 
 .infoIcon.vertical .infoIcon__description:first-child {
   margin-top: 0;
+}
+
+.infoIcon.vertical:hover figure {
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
 }
 
 .modal {
@@ -3274,7 +3324,6 @@ figure img {
 
 .footer {
   width: 100%;
-  color: white;
 }
 
 .footer__top, .footer__bottom {
@@ -3282,7 +3331,6 @@ figure img {
   padding-right: 5%;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #363842;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3313,12 +3361,14 @@ figure img {
 
 .footer__top {
   height: 200px;
+  background-color: #363842;
 }
 
 .footer__bottom {
   padding-top: 24px;
   padding-bottom: 24px;
-  background: linear-gradient(148deg, #e6764d, #FFA825);
+  background: #222328;
+  color: #7F8088;
 }
 
 .footer__logo {
@@ -3377,8 +3427,8 @@ figure img {
 }
 
 .footer__iconSocial {
-  width: 32px;
-  height: 32px;
+  width: 24px;
+  height: 24px;
 }
 
 @media screen and (max-width: 799px) {
@@ -3589,7 +3639,7 @@ body {
   position: absolute;
   top: 0;
   background: linear-gradient(148deg, #e6764d, #FFA825);
-  z-index: 1;
+  z-index: 4;
   -webkit-animation: curtain 0.6s 0.3s cubic-bezier(0.48, 0.14, 0.26, 1.01) both;
           animation: curtain 0.6s 0.3s cubic-bezier(0.48, 0.14, 0.26, 1.01) both;
   -webkit-backdrop-filter: blur(10px);
@@ -3597,7 +3647,6 @@ body {
 }
 
 .sliderHeading .swiper-slide-active:after {
-  z-index: 2;
   bottom: 0;
   top: initial;
 }
@@ -5241,12 +5290,12 @@ body {
 }
 
 .productSlider__image {
-  -webkit-transition: all 0.4s ease;
-  transition: all 0.4s ease;
   width: 100%;
   height: 100%;
   top: 0;
   position: absolute;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
 }
 
 .productSlider__image:before, .productSlider__image:after {
@@ -5301,6 +5350,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 28px;
+  font-weight: 600;
 }
 
 @media screen and (max-width: 799px) {
@@ -5337,6 +5387,7 @@ body {
   opacity: 0;
   position: absolute;
   bottom: 24px;
+  color: #FFA825;
   -webkit-transform: translateY(20px);
           transform: translateY(20px);
 }
@@ -5422,8 +5473,8 @@ body {
 }
 
 .productSlider__card:hover .productSlider__image {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .productSlider__card:hover .productSlider__image:before, .productSlider__card:hover .productSlider__image:after {
@@ -5444,6 +5495,10 @@ body {
   background-color: #363842;
   opacity: 0.6;
   z-index: 2;
+}
+
+.productSlider__card:hover .productSlider__image:after {
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 799px) {
