--- a/sass/foundations/_styles.scss
+++ b/sass/foundations/_styles.scss
@@ -78,11 +78,36 @@ transform 0.4s $cubicModules;
     }
 }
 
-@mixin animeImg {
-    .animeImg {
+@mixin animeBg {
+    .animeBg {
         transition: transform 2s ease, opacity 1s ease-in;
         transform: scale(1.2);
         opacity: 0;
+    }
+}
+
+@mixin animeImg {
+    .animeImg {
+        transition: all 1s ease;
+        overflow: hidden;
+        transform: translateY(100px) scaleY(1.2);
+        position: relative;
+
+        &:before {
+            content: '';
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            background: $g-01;
+            top: 0;
+            transition: all 0.6s ease;
+            z-index: 1;
+        }
+
+        img {
+            transition: all 1s ease;
+            transform: scale(1.6);
+        }
     }
 }
 
@@ -101,7 +126,7 @@ transform 0.4s $cubicModules;
 
 header {
     @include anime;
-    @include animeImg;
+    @include animeBg;
     transition: $transitionModules;
     opacity: 0;
     overflow: hidden;
@@ -110,6 +135,7 @@ header {
 section,
 footer {
     @include anime;
+    @include animeBg;
     @include animeImg;
     transition: $transitionModules;
     opacity: 0;
@@ -122,10 +148,24 @@ footer {
     transform: translateY(0);
 
     .anime,
+    .animeBg,
     .animeImg {
         opacity: 1;
         transform: none;
+
     }
+
+    .animeImg {
+
+        &:before {
+            height: 0%;
+        }
+
+        img {
+            transform: none;
+        }
+    }
+
 }
 
 // Transitions
