--- a/sass/foundations/_colours.scss
+++ b/sass/foundations/_colours.scss
@@ -14,6 +14,7 @@ $neu-07: #7F8088;
 $neu-08: #5C5C66;
 $neu-09: #363842;
 $neu-10: #222328;
+$neu-11: #1c1c1f;
 
 $g-01: linear-gradient(148deg, $m-01, $m-02);
 
