--- a/css/main.css
+++ b/css/main.css
@@ -3370,7 +3370,7 @@ figure img {
   padding-top: 24px;
   padding-bottom: 24px;
   background: #1c1c1f;
-  color: #7F8088;
+  color: #B4B4BA;
 }
 
 .footer__logo {
