--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -162,7 +162,7 @@ body {
         }
 
         &:before {
-            background-image: url("https://images.unsplash.com/photo-1528139494595-a848e52c6335?ixlib=rb-1.2.1&auto=format&fit=crop&w=975&q=80");
+            background-image: url("/assets/images/bgslider.jpg");
             background-size: cover;
             filter: grayscale(100%);
         }
