--- a/css/main.css
+++ b/css/main.css
@@ -3753,7 +3753,7 @@ body {
 }
 
 .sliderHeading__wrapper:before {
-  background-image: url("/assets/images/bgslider.jpg");
+  background-image: url("../assets/images/bgslider.jpg");
   background-size: cover;
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
