--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -9,52 +9,6 @@ body {
 
 }
 
-.cenas {
-    height: 200vh;
-}
-
-.simpleHeading {
-    min-height: 520px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-
-    @include sm {
-        min-height: 480px;
-    }
-
-    &__bgImage {
-        @include overlay;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        left: 0;
-        top: 0;
-    }
-
-    &__wrapper {
-        @include wrapper;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-
-        z-index: 1;
-    }
-
-    &__title {
-        @include font-xl;
-    }
-
-    &__subtitle {
-        @include font-l;
-    }
-
-    &__description {
-        @include font-m;
-    }
-}
 
 .sliderHeading {
     height: 100vh;
@@ -316,131 +270,6 @@ body {
     }
 }
 
-.simpleMedia {
-    @include wrapper;
-    position: relative;
-    max-width: calc(1024px + 10vw);
-
-    @include sm {
-        padding-left: 0;
-        padding-right: 0;
-    }
-
-    &__image {
-        max-width: 1024px;
-        max-height: 576px;
-        margin: 0 auto;
-        overflow: hidden;
-        position: relative;
-    }
-
-    &__element {
-        position: absolute;
-        display: none;
-    }
-
-
-    &.video {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-
-        .simpleMedia {
-            &__image {
-                @include overlay;
-                @include transition;
-
-                &:before,
-                &:after {
-                    z-index: 1;
-                }
-
-                img {
-                    @include transition;
-                }
-            }
-
-            &__element {
-                @include transition;
-                display: flex;
-                justify-content: center;
-                width: 40px;
-                height: 40px;
-                z-index: 2;
-                background-image: url("../assets/icons-white/icon-179.svg");
-            }
-
-        }
-
-        &:hover {
-            .simpleMedia {
-                &__image {
-                    img {
-                        transform: scale(1.2);
-                    }
-
-                    &:before {
-                        opacity: 0.6;
-                    }
-                }
-
-                &__element {
-                    transform: scale(1.2);
-                }
-            }
-        }
-    }
-
-    &.map {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-
-
-        .simpleMedia {
-            &__image {
-                @include overlay;
-
-                &:before,
-                &:after {
-                    opacity: 0;
-                }
-
-                img {
-                    @include transition;
-                }
-            }
-
-            &__element {
-                @include transition;
-                //width: 100%;
-                z-index: 2;
-                color: white;
-
-            }
-        }
-
-        &:hover {
-            .simpleMedia {
-                &__image {
-                    @include overlay;
-
-                    img {
-                        transform: scale(1.2);
-                    }
-
-                }
-
-                &__element {
-                    display: flex;
-                }
-            }
-        }
-    }
-}
-
 .highlightSlider {
     @include moduleDefault;
     height: 600px;
@@ -495,13 +324,14 @@ body {
     &__wrapper {
         height: 100%;
         position: relative;
+        z-index: 2;
     }
 
     &__bgImage {
         @include overlay;
         width: 100%;
         height: 100%;
-        position: absolute;
+        position: absolute !important;
         left: 0;
         top: 0;
     }
@@ -527,7 +357,7 @@ body {
     }
 
     &__subtitle {
-        @include font-l;
+        @include font-m;
     }
 
     &.testimonials {
@@ -536,6 +366,7 @@ body {
         overflow: visible;
 
         &:before {
+
             content: '';
             width: 100px;
             height: 100px;
@@ -580,14 +411,25 @@ body {
         }
 
         .highlightSlider {
+
+            &__bgImage {
+                img {
+                    filter: grayscale(100%);
+                }
+
+                &:after {
+                    opacity: 0.8;
+                }
+            }
+
             &__heading {
                 @include paddingSide;
                 @include spacingL;
                 position: absolute;
                 width: 100%;
-                text-align: left;
+                text-align: center;
                 color: white;
-                align-items: flex-start;
+                align-items: center;
                 left: 50%;
                 transform: translateX(-50%);
                 max-width: calc(1024px + 10vw);
@@ -601,7 +443,7 @@ body {
                 max-width: calc(1024px + 10vw);
                 width: 100%;
                 display: flex;
-                justify-content: flex-end;
+                justify-content: center;
             }
 
             &__text {
@@ -609,7 +451,9 @@ body {
                 text-align: left;
                 position: initial;
                 padding: 0;
-                padding-right: 64px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
 
                 @include sm {
                     width: 100%;
@@ -622,18 +466,36 @@ body {
                 max-width: $textMaxWidth;
                 width: 100%;
 
-                @include sm {
-                    width: calc(100% - 40px);
-                    margin-left: 40px;
-                }
             }
 
             &__subtitle {
                 @include font-m;
             }
+
+            &__description {
+                text-align: center;
+            }
+        }
+
+        &:hover {
+            .highlightSlider {
+                &__bgImage {
+
+                    img {
+                        transform: scale(1.2);
+                    }
+
+                    &:after {
+                        opacity: 0.9;
+                    }
+                }
+
+
+            }
         }
     }
 }
+
 
 .productSlider {
     @include spacingL;
@@ -644,11 +506,11 @@ body {
     }
 
     .swiper-button-prev {
-        left: -32px;
+        left: 0px;
     }
 
     .swiper-button-next {
-        right: -32px;
+        right: 0px;
     }
 
     .swiper-pagination {
@@ -672,7 +534,7 @@ body {
 
     &__sliderContainer {
         position: relative;
-        padding: 0 40px;
+        padding: 0 64px;
 
 
         @include sm {
@@ -797,256 +659,6 @@ body {
                         }
                     }
                 }
-            }
-        }
-    }
-}
-
-.productGrid {
-    @include spacingL;
-    @include moduleDefault;
-
-    &__wrapper {
-        @include wrapper;
-        height: 100%;
-        position: relative;
-        margin: 0 auto;
-        text-align: center;
-    }
-
-    &__content {
-        margin: 0 auto;
-        max-width: 1024px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 40px;
-
-        @include sm {
-            grid-gap: 24px;
-        }
-
-        @include xs {
-            grid-gap: 24px;
-            grid-template-columns: 1fr;
-        }
-
-    }
-
-    &__image {
-        max-width: 240px;
-        height: 320px;
-        top: 0;
-
-        @include sm {
-            height: 280px;
-        }
-    }
-
-    &__text {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 32px;
-
-        @include sm {
-            margin-top: 24px;
-        }
-    }
-
-    &__productTitle {
-        @include font-m;
-    }
-
-    &__productSubtitle {
-        @include font-s;
-        margin-top: 8px;
-
-        @include xs {
-            margin-top: 4px;
-        }
-    }
-
-    &__link {
-        @include transition2;
-        opacity: 0;
-        position: absolute;
-        bottom: 24px;
-        transform: translateY(20px);
-
-        @include sm {
-            opacity: 1;
-            transform: translateY(0px);
-        }
-    }
-
-    &__card {
-        @include cardStyle2;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        flex-direction: column;
-        position: relative;
-
-        &:hover {
-            .productSlider {
-                &__link {
-                    transform: translateY(0);
-                    opacity: 1;
-                }
-            }
-        }
-    }
-
-    .cta {
-        margin-top: 32px;
-
-        @include sm {
-            margin-top: 24px;
-        }
-    }
-}
-
-.contentTabs {
-    @include spacingL;
-    @include moduleDefault;
-
-    &__wrapper {
-        @include wrapper;
-        @include transition;
-        display: flex;
-        position: relative;
-
-        @include sm {
-            flex-direction: column;
-        }
-    }
-
-    &__tabList {
-        width: 50%;
-        position: relative;
-
-        @include sm {
-            width: 100%;
-            display: flex;
-        }
-
-        @include xs {
-            margin-bottom: 40px;
-            flex-direction: column;
-        }
-    }
-
-    &__tabLink {
-        @include transition2;
-        @include font-m;
-        cursor: pointer;
-        padding: 0 32px;
-        height: 80px;
-        display: flex;
-        align-items: center;
-        border-radius: $radius;
-        border: 2px solid $neu-04;
-        background-color: white;
-        width: 80%;
-        margin-top: 0 !important;
-        margin-bottom: 32px;
-        opacity: 0.5;
-        position: relative;
-        overflow: hidden;
-
-        &:last-child {
-            margin-bottom: 0;
-        }
-
-        @include sm {
-            width: 100%;
-            height: 56px;
-            padding: 0 16px;
-            margin-right: 16px;
-
-            &:last-child {
-                margin-right: 0;
-            }
-        }
-
-        @include xs {
-            margin-bottom: 8px;
-        }
-
-        &.active {
-            opacity: 1;
-            border: 2px solid $neu-06;
-
-            &:before {
-                opacity: 1;
-                transform: translatex(0px);
-
-                @include sm {
-                    transform: rotate(90deg);
-                }
-            }
-
-            &:hover {
-                padding: 0 32px;
-
-                @include sm {
-                    padding: 0 16px;
-                }
-            }
-        }
-
-        &:hover {
-            border: 2px solid $neu-06;
-            padding: 0 40px;
-
-            @include sm {
-                padding: 0 16px;
-            }
-        }
-    }
-
-    &__content {
-        @include transition;
-        width: 50%;
-        height: 0px;
-
-        @include sm {
-            width: 100%;
-        }
-    }
-
-    &__tabContent {
-        display: none;
-
-        &.active {
-            display: block;
-
-            .contentTabs {
-                &__infoIcon {
-                    @include animationEnter;
-
-                }
-            }
-        }
-    }
-
-    &__download {
-        @include wrapper;
-
-        @include sm {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            margin-top: 16px;
-        }
-    }
-
-    &.dark {
-        .contentTabs {
-            &__tabLink {
-                background-color: $neu-09;
-                border: 2px solid $neu-07;
             }
         }
     }
@@ -1306,108 +918,6 @@ body {
 
                     margin-top: 0px;
                 }
-            }
-        }
-    }
-}
-
-.wot {
-    @include spacingL;
-    @include paddingSide;
-    @include moduleDefault;
-    width: 100%;
-
-    &__wrapper {
-        @include wrapper;
-        padding: 0;
-        max-width: $textMaxWidth;
-        width: 100%;
-        margin: 0 auto;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-
-        @include sm {
-            flex-direction: column;
-        }
-    }
-
-    &__heading {
-        text-align: left;
-        margin-bottom: 0;
-        align-items: flex-start;
-    }
-
-    &__text {
-        @include textMarginsSmall;
-    }
-
-    &.aside {
-        .wot {
-            &__wrapper {
-                max-width: 1024px;
-            }
-
-            &__heading {
-                max-width: $textMaxWidth;
-            }
-
-            &__text {
-                display: flex;
-                align-items: flex-end;
-                flex-direction: column;
-            }
-
-
-            &__description {
-                width: 70%;
-                max-width: $textMaxWidth;
-
-                @include sm {
-                    width: calc(100% - 40px);
-                }
-            }
-        }
-
-        .ctaContainer {
-            width: 70%;
-
-            @include sm {
-                width: 100%;
-            }
-        }
-    }
-
-    &.overlap {
-        padding-top: 0;
-        margin-top: -64px;
-        z-index: 1;
-
-        @include sm {
-            margin-top: -32px;
-        }
-
-        .wot {
-            &__wrapper {
-                max-width: calc(720px + 16vw);
-                padding: 80px 8vw;
-                background-color: $neu-02;
-
-                @include sm {
-                    max-width: calc(720px + 10vw);
-                    padding: 32px 5vw;
-                }
-            }
-        }
-    }
-
-    &.center {
-        text-align: center;
-
-        .wot {
-            &__heading {
-                text-align: center;
-                align-items: center;
             }
         }
     }
