--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -144,6 +144,7 @@
         font-weight: 700;
         margin-right: 64px;
         position: relative;
+        padding: 8px 0;
 
 
         &:last-child {
@@ -155,7 +156,7 @@
             width: 8px;
             height: 8px;
             left: 0;
-            bottom: -26px;
+            bottom: -8px;
             position: absolute;
             background-color: $m-02;
             opacity: 0;
@@ -169,7 +170,7 @@
             &:before {
                 width: 100%;
                 height: 2px;
-                bottom: -8px;
+                bottom: 0px;
                 opacity: 1;
                 transition: all 0.2s 0s ease, width 0.2s 0.2s ease, height 0.2s 0.1s ease;
 
