--- a/css/main.css
+++ b/css/main.css
@@ -4689,19 +4689,18 @@ body {
 .highlightSlider.testimonials .highlightSlider__heading {
   padding-left: 5%;
   padding-right: 5%;
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
   padding-top: 100px;
   padding-bottom: 100px;
-  position: absolute;
   width: 100%;
   text-align: center;
   color: white;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  max-width: calc(1024px + 10vw);
+  padding-bottom: 0;
 }
 
 @media screen and (max-width: 511px) {
@@ -4723,7 +4722,6 @@ body {
   padding-right: 5%;
   padding-top: 100px;
   padding-bottom: 100px;
-  margin-top: 100px;
   max-width: calc(1024px + 10vw);
   width: 100%;
   display: -webkit-box;
@@ -4745,6 +4743,12 @@ body {
   .highlightSlider.testimonials .highlightSlider__content {
     padding-top: 64px;
     padding-bottom: 64px;
+  }
+}
+
+@media screen and (max-width: 799px) {
+  .highlightSlider.testimonials .highlightSlider__content {
+    padding-bottom: 80px;
   }
 }
 
@@ -4771,6 +4775,7 @@ body {
   .highlightSlider.testimonials .highlightSlider__text {
     width: 100%;
     padding: 0;
+    padding-left: 24px;
   }
 }
 
@@ -4785,15 +4790,9 @@ body {
   background: linear-gradient(148deg, #e6764d, #FFA825);
 }
 
-@-webkit-keyframes line {
-  0% {
-    height: 0;
-  }
-}
-
-@keyframes line {
-  0% {
-    height: 0;
+@media screen and (max-width: 799px) {
+  .highlightSlider.testimonials .highlightSlider__text:before {
+    width: 4px;
   }
 }
 
