--- a/sass/foundations/_components.scss
+++ b/sass/foundations/_components.scss
@@ -1,3 +1,7 @@
+a {
+    cursor: pointer;
+}
+
 .ctaContainer {
     width: 100%;
 
@@ -19,12 +23,14 @@
     position: relative;
     overflow: hidden;
     border-radius: 32px;
+    cursor: pointer;
 
     span {
         display: flex;
         position: relative;
         align-items: center;
         justify-content: center;
+        cursor: pointer;
 
         &:before,
         &:after {
